force-app/main/default/objects/Care_Team__c/Care_Team__c.object-meta.xml
<CustomObject>
    <label>Care Team</label>
    <nameField>
        <displayFormat>CT-{000}</displayFormat>
        <label>CT-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>