force-app/main/default/objects/Care_Team__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Care Team</relationshipLabel>
    <relationshipName>Care_Team</relationshipName>
    <type>Lookup</type>
</CustomField>