force-app/main/default/objects/Care_Team__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Care Team</relationshipLabel>
    <relationshipName>Care_Team</relationshipName>
    <type>Lookup</type>
</CustomField>