force-app/main/default/objects/Care_Team__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Care Team</relationshipLabel>
    <relationshipName>Care_Team</relationshipName>
    <type>Lookup</type>
</CustomField>